--- a/my-app/package.json
+++ b/my-app/package.json
@@ -16,6 +16,7 @@
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "face-api.js": "^0.22.2",
+    "fs": "^0.0.1-security",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
